# wxmax

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: panel.yml
config/: stations.yaml
docs/: index.html
panel_data/: alerted.json  estimates.parquet  truth.parquet  weights.json
scripts/: demo_eval.py
tests/: test_alerts.py  test_backtest.py  test_confidence.py  test_dashboard.py  test_ingest.py  test_metrics.py  test_models.py  test_nowcast.py  test_online_experts.py  test_panel.py  test_predictive.py  test_stations.py  test_timeutil.py  test_truth_cli.py  test_watch.py
wxmax/: __init__.py  config.py  stations.py  store.py  timeutil.py
wxmax/calibrate/: __init__.py  conformal.py
wxmax/features/: build_features.py
wxmax/ingest/: _http.py  alerts_nws.py  forecasts_ecmwf.py  forecasts_nodd.py  forecasts_openmeteo.py  obs_asos.py  obs_nws.py  truth_cli.py
wxmax/models/: emos.py  mos_blend.py  online_experts.py
wxmax/nowcast/: __init__.py  confidence.py  hotspot.py  obs_nowcast.py  peak_climatology.py  predictive.py
wxmax/panel/: __init__.py  dashboard.py  notify.py  panel.py  run.py  watch.py
wxmax/serve/: __init__.py
wxmax/verify/: __init__.py  backtest.py  calibrate_confidence.py  calibrate_peak.py  evaluate.py  metrics.py
